After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698733 - org.gnome.settings-daemon.plugins.power button-power ignores shutdown
org.gnome.settings-daemon.plugins.power button-power ignores shutdown
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-24 13:32 UTC by jsheffield40
Modified: 2013-10-19 22:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description jsheffield40 2013-04-24 13:32:00 UTC
The problem defined (pasted) below was first reported to Launchpad for Elementary OS.  I was asked to enter it here because it is considered an upstream bug.

System Settings - Power is set to "Shutdown" for "When the power
  button is pressed:".  It should go through a automatic shut down
  process with out any additional response from me.  However it brings
  up a dialog box asking me what I want to do.  That should be the
  response when the option is set to: "Ask me".  As it is now they both
  act the same.

  ProblemType: Bug
  DistroRelease: elementary OS 0.2
  Package: elementary-desktop 1.284-0~355~precise1 [origin: LP-PPA-elementary-os-daily]
  ProcVersionSignature: Ubuntu 3.2.0-33.52-generic-pae 3.2.31
  Uname: Linux 3.2.0-33-generic-pae i686
  NonfreeKernelModules: nvidia
  ApportVersion: 2.0.1-0ubuntu15+elementary3~precise1
  Architecture: i386
  CrashDB: elementary_meta
  Date: Wed Nov 28 20:17:32 2012
  InstallationMedia: elementary OS 0.2 "Luna" - Beta 1 i386 (20121114)
  MarkForUpload: True
  ProcEnviron:
   PATH=(custom, no user)
   LANG=en_US.UTF-8
   SHELL=/bin/bash
  SourcePackage: elementary-meta
  SuspiciousXErrors:
Comment 1 Bastien Nocera 2013-04-25 09:38:41 UTC
(In reply to comment #0)
> System Settings - Power is set to "Shutdown" for "When the power
>   button is pressed:".  It should go through a automatic shut down
>   process with out any additional response from me.

Who/what says that it shouldn't be an interactive shutdown?
Comment 2 jsheffield40 2013-04-25 13:03:13 UTC
Based on previous versions I have used over the last 4 years.  I have always set my session to perform an automatic shutdown with the push of the power off button,  in case I get in a situation where the system fails to respond to the mouse/keyboard.  Under these situations I could at least perform a graceful shutdown rather then a forced power off (holding the power off button for an extended period).

The current version of Shutdown requires I force the power off if my system stops responding to the mouse/keyboard. As it is now there is no difference between this setting (Shutdown) and Ask Me (Interactive).  Why have these two different option when they act the same?
Comment 3 Bastien Nocera 2013-10-19 22:04:15 UTC
commit af2f36d23bc72da0bda490aa2c2e89fad793742b
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sun Oct 20 00:01:49 2013 +0200

    media-keys: Make the "shutdown" action not be interactive
    
    Shutdown is supposed to shutdown without asking, as "interactive"
    already should do what we need for interactive shutdowns.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=698733