media-keys: Make the "shutdown" action not be interactive

Shutdown is supposed to shutdown without asking, as "interactive"
already should do what we need for interactive shutdowns.

https://bugzilla.gnome.org/show_bug.cgi?id=698733